--- a/prod/client/assets/index.spa.html
+++ b/prod/client/assets/index.spa.html
@@ -2,8 +2,8 @@
 <html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
-  <link href="/assets/app.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css" rel="stylesheet"></head>
+  <link href="/prod/client/app.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css" rel="stylesheet"></head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-  <script type="text/javascript" src="/assets/manifest.c19e4391b11bead3ac94.js"></script><script type="text/javascript" src="/assets/vendor.def91941182befca8868.js"></script><script type="text/javascript" src="/assets/app.4af136f357ff844f6f2e.js"></script></body>
+  <script type="text/javascript" src="/prod/client/manifest.5f395777614f3fe84a23.js"></script><script type="text/javascript" src="/prod/client/vendor.5bc981e5fb8b58424bc0.js"></script><script type="text/javascript" src="/prod/client/app.a6c4f4b87506266941b4.js"></script></body>
 </html>
